tests/specs/ecosystem/clappcodes/transporter/0_2_1.test
clappcodes/transporter/0.2.1
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
  serve = (options?: Partial<Deno.ServeTlsOptions>): Deno.HttpServer =>({} as never);
                                  ~~~~~~~~~~~~~~~
    at file://<tmpdir>/app.ts:18:35

error: Type checking failed.

